[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/user interface/backgrounds/craftpix-beach-2d-game-backgrounds/PNG/game_background_1/layers/cloud.png" type="Texture" id=1]
[ext_resource path="res://assets/user interface/backgrounds/craftpix-beach-2d-game-backgrounds/PNG/game_background_1/layers/sky.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/kenney_shooting-gallery/PNG/Stall/water1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/kenney_shooting-gallery/PNG/Stall/water2.png" type="Texture" id=4]
[ext_resource path="res://src/games/Game3.gd" type="Script" id=5]
[ext_resource path="res://src/user interface/UserInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/autoload/DuckSpawnTimer.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/kenney_shooting-gallery/PNG/Objects/rifle.png" type="Texture" id=8]
[ext_resource path="res://assets/user interface/backgrounds/ship_deck.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/kenney_shooting-gallery/PNG/HUD/crosshair_outline_large.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/boat-gamedeveloperstudio/pngs/blue.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/boat-gamedeveloperstudio/pngs/yellow.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_111.png" type="Texture" id=13]
[ext_resource path="res://src/autoload/SpawnTimer.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_109.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_110.png" type="Texture" id=21]

[sub_resource type="AudioStreamMicrophone" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 34.75, 388.5 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundLayer/Boat1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 620 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundLayer/Boat1:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundLayer/Boat2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 740, 720 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackgroundLayer/Boat2:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "move_boats"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundLayer/Boat1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 630 ), Vector2( 10, 610 ), Vector2( 10, 630 ), Vector2( 10, 635 ), Vector2( 10, 630 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundLayer/Boat1:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 3.0, 8.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundLayer/Boat2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 740, 720 ), Vector2( 740, 700 ), Vector2( 740, 720 ), Vector2( 740, 715 ), Vector2( 740, 720 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackgroundLayer/Boat2:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, 6.0, -5.0, 0.0 ]
}

[node name="Game3" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ -1.0 ]
}

[node name="UserInterfaceLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="UserInterface" parent="UserInterfaceLayer" instance=ExtResource( 6 )]

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -1077.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Clouds" type="TextureRect" parent="BackgroundLayer"]
margin_right = 1081.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Boat1" type="TextureRect" parent="BackgroundLayer"]
margin_left = 32.0
margin_top = 620.0
margin_right = 272.0
margin_bottom = 812.0
rect_rotation = -3.0
texture = ExtResource( 12 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave1-1" type="TextureRect" parent="BackgroundLayer"]
margin_left = -4.0
margin_top = 778.0
margin_right = 268.0
margin_bottom = 1002.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave1-2" type="TextureRect" parent="BackgroundLayer"]
margin_left = 265.0
margin_top = 778.0
margin_right = 537.0
margin_bottom = 1002.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave1-3" type="TextureRect" parent="BackgroundLayer"]
margin_left = 536.0
margin_top = 778.0
margin_right = 808.0
margin_bottom = 1002.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave1-4" type="TextureRect" parent="BackgroundLayer"]
margin_left = 808.0
margin_top = 778.0
margin_right = 1080.0
margin_bottom = 1002.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Boat2" type="TextureRect" parent="BackgroundLayer"]
margin_left = 740.0
margin_top = 720.0
margin_right = 1045.0
margin_bottom = 953.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave2-1" type="TextureRect" parent="BackgroundLayer"]
margin_left = -4.0
margin_top = 914.0
margin_right = 268.0
margin_bottom = 1138.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave2-2" type="TextureRect" parent="BackgroundLayer"]
margin_left = 266.0
margin_top = 914.0
margin_right = 538.0
margin_bottom = 1138.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave2-3" type="TextureRect" parent="BackgroundLayer"]
margin_left = 537.0
margin_top = 914.0
margin_right = 809.0
margin_bottom = 1138.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave2-4" type="TextureRect" parent="BackgroundLayer"]
margin_left = 809.0
margin_top = 914.0
margin_right = 1081.0
margin_bottom = 1138.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave3-1" type="TextureRect" parent="BackgroundLayer"]
margin_left = -4.0
margin_top = 1036.0
margin_right = 268.0
margin_bottom = 1260.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave3-2" type="TextureRect" parent="BackgroundLayer"]
margin_left = 265.0
margin_top = 1036.0
margin_right = 537.0
margin_bottom = 1260.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave3-3" type="TextureRect" parent="BackgroundLayer"]
margin_left = 536.0
margin_top = 1038.0
margin_right = 808.0
margin_bottom = 1262.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave3-4" type="TextureRect" parent="BackgroundLayer"]
margin_left = 808.0
margin_top = 1036.0
margin_right = 1080.0
margin_bottom = 1260.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackgroundLayer2" type="CanvasLayer" parent="."]

[node name="Wave4-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1158.0
margin_right = 268.0
margin_bottom = 1382.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave4-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 265.0
margin_top = 1158.0
margin_right = 537.0
margin_bottom = 1382.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave4-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 536.0
margin_top = 1158.0
margin_right = 808.0
margin_bottom = 1382.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave4-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 808.0
margin_top = 1158.0
margin_right = 1080.0
margin_bottom = 1382.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave5-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1294.0
margin_right = 268.0
margin_bottom = 1518.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave5-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 266.0
margin_top = 1294.0
margin_right = 538.0
margin_bottom = 1518.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave5-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 537.0
margin_top = 1294.0
margin_right = 809.0
margin_bottom = 1518.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave5-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 809.0
margin_top = 1294.0
margin_right = 1081.0
margin_bottom = 1518.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave6-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1416.0
margin_right = 268.0
margin_bottom = 1640.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave6-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 265.0
margin_top = 1416.0
margin_right = 537.0
margin_bottom = 1640.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave6-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 536.0
margin_top = 1418.0
margin_right = 808.0
margin_bottom = 1642.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave6-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 808.0
margin_top = 1416.0
margin_right = 1080.0
margin_bottom = 1640.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave7-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1542.0
margin_right = 268.0
margin_bottom = 1766.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave7-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 266.0
margin_top = 1542.0
margin_right = 538.0
margin_bottom = 1766.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave7-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 537.0
margin_top = 1542.0
margin_right = 809.0
margin_bottom = 1766.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave7-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 809.0
margin_top = 1542.0
margin_right = 1081.0
margin_bottom = 1766.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave8-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1696.0
margin_right = 268.0
margin_bottom = 1920.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave8-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 265.0
margin_top = 1696.0
margin_right = 537.0
margin_bottom = 1920.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave8-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 536.0
margin_top = 1698.0
margin_right = 808.0
margin_bottom = 1922.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave8-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 808.0
margin_top = 1696.0
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave9-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 1863.0
margin_right = 268.0
margin_bottom = 2087.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave9-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 266.0
margin_top = 1863.0
margin_right = 538.0
margin_bottom = 2087.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave9-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 537.0
margin_top = 1863.0
margin_right = 809.0
margin_bottom = 2087.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave9-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 809.0
margin_top = 1863.0
margin_right = 1081.0
margin_bottom = 2087.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave10-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 2017.0
margin_right = 268.0
margin_bottom = 2241.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave10-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 265.0
margin_top = 2017.0
margin_right = 537.0
margin_bottom = 2241.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave10-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 536.0
margin_top = 2019.0
margin_right = 808.0
margin_bottom = 2243.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave10-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 808.0
margin_top = 2017.0
margin_right = 1080.0
margin_bottom = 2241.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave11-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 2186.0
margin_right = 268.0
margin_bottom = 2410.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave11-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 266.0
margin_top = 2186.0
margin_right = 538.0
margin_bottom = 2410.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave11-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 537.0
margin_top = 2186.0
margin_right = 809.0
margin_bottom = 2410.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave11-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 809.0
margin_top = 2186.0
margin_right = 1081.0
margin_bottom = 2410.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave12-1" type="TextureRect" parent="BackgroundLayer2"]
margin_left = -4.0
margin_top = 2340.0
margin_right = 268.0
margin_bottom = 2564.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave12-2" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 265.0
margin_top = 2340.0
margin_right = 537.0
margin_bottom = 2564.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave12-3" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 536.0
margin_top = 2342.0
margin_right = 808.0
margin_bottom = 2566.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wave12-4" type="TextureRect" parent="BackgroundLayer2"]
margin_left = 808.0
margin_top = 2340.0
margin_right = 1080.0
margin_bottom = 2564.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Target" type="TextureRect" parent="BackgroundLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -125.0
margin_right = 100.0
margin_bottom = 75.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ShipDeck" type="TextureRect" parent="BackgroundLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -617.5
margin_top = -266.0
margin_right = 617.5
margin_bottom = 1344.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BubbleGun" type="TextureRect" parent="BackgroundLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 470.0
margin_right = 270.0
margin_bottom = 1479.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MicrophoneInput" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
autoplay = true
bus = "Record"

[node name="DuckSpawnTimer" parent="." instance=ExtResource( 14 )]
wait_time = 5.0
script = ExtResource( 7 )

[node name="GameArea" type="Area2D" parent="."]
position = Vector2( 540, 1916 )
collision_layer = 0
collision_mask = 2
space_override = 3

[node name="GameCollision" type="CollisionShape2D" parent="GameArea"]
position = Vector2( -504.75, -384.5 )
shape = SubResource( 8 )

[node name="Countdown1" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 476.0
margin_top = 896.0
margin_right = 604.0
margin_bottom = 1024.0
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Countdown2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 476.0
margin_top = 896.0
margin_right = 604.0
margin_bottom = 1024.0
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Countdown3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 476.0
margin_top = 896.0
margin_right = 604.0
margin_bottom = 1024.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move_boats"
anims/RESET = SubResource( 9 )
anims/move_boats = SubResource( 10 )

[connection signal="body_entered" from="GameArea" to="." method="_on_GameArea_body_entered"]
